# SenseiDoro-Discord-Bot

./: .gitignore  LICENSE.md  LICENSE.txt  README.md  main.py  pomodojo_client.py  pyproject.toml  requirements  requirements.txt  run_sensei_pomo.py  session.py  timer.py
legal/: Sensei_Doro_Privacy_Policy.md  Sensei_Doro_Terms_of_Service.md
sensei_doro/: __main__.py
sensei_doro/cogs/listeners/: on_ready.py  on_vs_update.py
sensei_doro/cogs/slash_cmds/: data.py  help.py
sensei_doro/cogs/tasks/: __init__.py  topgg.py
sensei_doro/dbm/: sensei.db
sensei_doro/dojo/: dojo.py
sensei_doro/session/: session_env.py  tools.py
senseidoro/: __main__.py  bot.py  db.py  models.py  session.py
senseidoro/cogs/: admin.py  create_session.py  on_ready.py  onboarding.py  register.py  register_old_servers.py
src/: main.py  requirements
src/clients/: __init__.py  pomodojo_client.py  sensei_client.py
src/cogs/: __init__.py  better_response.py  useful_decoration.py
src/cogs/commands/: admin_tools.py  cmd_helper.py  config.py  create.py  help.py  session.py  session_cmd.py  session_management.py  set_role.py  tools.py
src/cogs/listeners/: __init__.py  cmd_err_handler.py  command_err_handler.py  on_guild_join.py  on_guild_remove.py  on_ready.py  on_vs_update.py
src/cogs/slash_cmds/: __init__.py  admin_tools.py  cmd_helper.py  config.py  create.py  data.py  help.py  session_cmd.py  set_role.py
src/cogs/tasks/: __init__.py  logging.py  topgg.py
src/dbm/: __init__.py  setup.py
src/dojo/: __init__.py  dojo.py
src/models/: session.py  timer.py
src/session/: __init__.py  env_manager.py  session.py  session_config.py  session_dashboard.py  session_env.py  session_timer.py  timer.py  tools.py
(+4 files in other folders)
